--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   web:
-    build: .
+    image: glr29/tec_sustentaveis:listagem-produtos
     ports:
       - '8080:80'
     depends_on:
